Fix Lombok Java 21 compiler issue